{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 265,
  "lineage": "d6949aae-ca40-afa4-8d0e-e66bc332cf75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "control_plane_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05589ebdcff0780db",
            "association_id": "eipassoc-0743afdd9a222be9e",
            "domain": "vpc",
            "id": "eipalloc-05589ebdcff0780db",
            "instance": "i-043e8c9f0a96dadd2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-056eb65a883f84ab4",
            "private_dns": "ip-10-0-1-113.ap-south-1.compute.internal",
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-13-201-235-202.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.235.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kubeadm_demo_control_plane",
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker_nodes_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d5d5e1c809b8cb0",
            "association_id": "eipassoc-0f58bf9b48797bb50",
            "domain": "vpc",
            "id": "eipalloc-05d5d5e1c809b8cb0",
            "instance": "i-04a17a3906eed56ea",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d2fefc28f272de97",
            "private_dns": "ip-10-0-1-250.ap-south-1.compute.internal",
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-3-111-75-249.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.75.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kubeadm_demo_worker_nodes",
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_subnet.kubeadm_demo_subnet2",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07978a7d453e13b4d",
            "association_id": "eipassoc-0ed4c39f8e13c0d93",
            "domain": "vpc",
            "id": "eipalloc-07978a7d453e13b4d",
            "instance": "i-039a8eecdf4f82d40",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e85c1c963ab7341e",
            "private_dns": "ip-10-0-2-178.ap-south-1.compute.internal",
            "private_ip": "10.0.2.178",
            "public_dns": "ec2-13-200-157-36.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.157.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.kubeadm_demo_worker_nodes",
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_subnet.kubeadm_demo_subnet2",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_demo_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:106415312828:instance/i-043e8c9f0a96dadd2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043e8c9f0a96dadd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056eb65a883f84ab4",
            "private_dns": "ip-10-0-1-113.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f399cab2c43d5877",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d214823c93df5ff",
              "sg-08d6cd9fd337b5e9c",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011bd8960cf938f4e",
            "tags": {
              "Name": "Kubeadm Master",
              "Role": "Control plane node"
            },
            "tags_all": {
              "Name": "Kubeadm Master",
              "Role": "Control plane node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d214823c93df5ff",
              "sg-08d6cd9fd337b5e9c",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_demo_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:106415312828:instance/i-04a17a3906eed56ea",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a17a3906eed56ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d2fefc28f272de97",
            "private_dns": "ip-10-0-1-250.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abbaa2d9fbce4161",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d214823c93df5ff",
              "sg-06baf98c0d311205f",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011bd8960cf938f4e",
            "tags": {
              "Name": "Kubeadm Worker 0",
              "Role": "Worker node"
            },
            "tags_all": {
              "Name": "Kubeadm Worker 0",
              "Role": "Worker node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d214823c93df5ff",
              "sg-06baf98c0d311205f",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_subnet.kubeadm_demo_subnet2",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:106415312828:instance/i-039a8eecdf4f82d40",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039a8eecdf4f82d40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e85c1c963ab7341e",
            "private_dns": "ip-10-0-2-178.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d228ce765f979b5",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d214823c93df5ff",
              "sg-06baf98c0d311205f",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0705d5743785cdd5f",
            "tags": {
              "Name": "Kubeadm Worker 1",
              "Role": "Worker node"
            },
            "tags_all": {
              "Name": "Kubeadm Worker 1",
              "Role": "Worker node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d214823c93df5ff",
              "sg-06baf98c0d311205f",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_subnet.kubeadm_demo_subnet2",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "temp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:106415312828:instance/i-0c0cd5793cf44bd2f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0cd5793cf44bd2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030f2629c969a6b5a",
            "private_dns": "ip-10-0-1-152.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-43-205-255-174.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.255.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036622e80cd996d5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d214823c93df5ff",
              "sg-06baf98c0d311205f",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011bd8960cf938f4e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d214823c93df5ff",
              "sg-06baf98c0d311205f",
              "sg-0ae1ff342434065b5",
              "sg-0e1d6029583adbbd8"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.db-sg",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_vpc.kubeadm_demo_vpc",
            "data.aws_ami.latest_ubuntu",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubeadm_demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:internet-gateway/igw-03c571d1cd22d2fa6",
            "id": "igw-03c571d1cd22d2fa6",
            "owner_id": "106415312828",
            "tags": {
              "Name": "Kubeadm Demo Internet GW"
            },
            "tags_all": {
              "Name": "Kubeadm Demo Internet GW"
            },
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubeadm_demo_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:route-table/rtb-04b7133b8f7beadbe",
            "id": "rtb-04b7133b8f7beadbe",
            "owner_id": "106415312828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c571d1cd22d2fa6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubeadm Demo IGW route table"
            },
            "tags_all": {
              "Name": "kubeadm Demo IGW route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubeadm_demo_igw",
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubeadm_demo_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026ca8a4cdab731bd",
            "route_table_id": "rtb-04b7133b8f7beadbe",
            "subnet_id": "subnet-011bd8960cf938f4e"
          },
          "dependencies": [
            "aws_internet_gateway.kubeadm_demo_igw",
            "aws_route_table.kubeadm_demo_routetable",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubeadm_demo_route_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d99ca831d25e59a2",
            "route_table_id": "rtb-04b7133b8f7beadbe",
            "subnet_id": "subnet-0705d5743785cdd5f"
          },
          "dependencies": [
            "aws_internet_gateway.kubeadm_demo_igw",
            "aws_route_table.kubeadm_demo_routetable",
            "aws_subnet.kubeadm_demo_subnet2",
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:security-group/sg-0e1d6029583adbbd8",
            "description": "Allow tls for inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1d6029583adbbd8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d214823c93df5ff",
                  "sg-08d6cd9fd337b5e9c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cg-4-db-sg",
            "name_prefix": "",
            "owner_id": "106415312828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cg-4-db-sg"
            },
            "tags_all": {
              "Name": "cg-4-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubadm_demo_sg_common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:security-group/sg-05d214823c93df5ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d214823c93df5ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "common-ports",
            "name_prefix": "",
            "owner_id": "106415312828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "common ports"
            },
            "tags_all": {
              "Name": "common ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_demo_sg_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:security-group/sg-08d6cd9fd337b5e9c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08d6cd9fd337b5e9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Contoller Manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "etcd server client API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              }
            ],
            "name": "kubeadm-control-plane security group",
            "name_prefix": "",
            "owner_id": "106415312828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Control Plane SG"
            },
            "tags_all": {
              "Name": "Control Plane SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_demo_sg_flannel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:security-group/sg-0ae1ff342434065b5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ae1ff342434065b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel overlay backend",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel vxlan backend",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "flannel-overlay-backend",
            "name_prefix": "",
            "owner_id": "106415312828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Flannel Overlay backend"
            },
            "tags_all": {
              "Name": "Flannel Overlay backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_demo_sg_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:security-group/sg-06baf98c0d311205f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06baf98c0d311205f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              }
            ],
            "name": "kubeadm-worker-node security group",
            "name_prefix": "",
            "owner_id": "106415312828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Worker Nodes SG"
            },
            "tags_all": {
              "Name": "Worker Nodes SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubeadm_demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:subnet/subnet-011bd8960cf938f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011bd8960cf938f4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106415312828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubadm_demo_public_subnet"
            },
            "tags_all": {
              "Name": "kubadm_demo_public_subnet"
            },
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubeadm_demo_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:subnet/subnet-0705d5743785cdd5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0705d5743785cdd5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106415312828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet in AZ 2"
            },
            "tags_all": {
              "Name": "Subnet in AZ 2"
            },
            "vpc_id": "vpc-00431ba09731d5fe0"
          },
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubeadm_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106415312828:vpc/vpc-00431ba09731d5fe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be08c27bf98f1d39",
            "default_route_table_id": "rtb-00d536445898a2933",
            "default_security_group_id": "sg-060dd53babb3b7acc",
            "dhcp_options_id": "dopt-03d37568",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00431ba09731d5fe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d536445898a2933",
            "owner_id": "106415312828",
            "tags": {
              "Name": "kubeadm_demo_vpc",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "kubeadm_demo_vpc",
              "kubernetes.io/cluster/kubernetes": "owned"
            }
          }
        }
      ]
    }
  ]
}